# codex-whip

./: .gitignore  AGTI_QUANT_RESEARCH_MANDATE.md  README.md  mkdocs.yml  pyproject.toml
codex_whip/: __init__.py  cli.py
docs/: index.md  instrumentation.md  managing-claude.md  nazgul-orc.md  operating-loop.md  porting.md
examples/: config.toml  overnight-standing-orders.md
tests/: test_cli.py
