[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-whip"
version = "0.1.0"
description = "A tmux-based keepalive and continuation layer for long-running Codex CLI sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AGTI", email = "opensource@agti.com" }
]
keywords = ["codex", "tmux", "automation", "agents", "cron"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/agticorp/codex-whip"
Repository = "https://github.com/agticorp/codex-whip"
Issues = "https://github.com/agticorp/codex-whip/issues"

[project.scripts]
codex-whip = "codex_whip.cli:main"

[tool.setuptools]
packages = ["codex_whip"]
